# python-compose

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: conda.yml  formatting.yml  mamba.yml  pyenv.yml  pypi.yml  venv.yml
examples/conda/: example.py
examples/file_creator/: config.yaml  create_file.py
examples/mamba/: example.py
examples/poetry/: pyproject.toml
examples/poetry/example/: example.py
examples/pyenv_virtualenv/: example.py
examples/yaml/: config.yaml
python_compose/: compose.py  spec.py
python_compose/unit/: compose_unit.py  conda.py  poetry.py  pyenv_virtualenv.py  venv.py
tests/: config.yaml  create_file.py  test_compose.py
tests/poetry_test/: pyproject.toml
