[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-compose"
version = "1.0.0"
description = "Python Compose, a tool for spinning up many long-running Python services simultaneously."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  { name = "David Rubinstein", email = "drubinstein91@gmail.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft :: Windows",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = [
  "pydantic",
  "pydantic-yaml",
  "ruamel.yaml",
  "typing-extensions",
]

[project.urls]

[project.optional-dependencies]
test = [
  "pytest",
]
dev = [
  "python-compose[test]",
  "black",
  "bump2version",
  "hatch",
  "isort",
  "mypy",
  "pre-commit",
  "ruff",
]

[project.scripts]
python-compose = "python_compose.compose:main"

[tool.bumpversion]
file = "python_compose/__init__.py"

[bdist_wheel]
universal = 1

[tool.black]
line-length = 99

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
disallow_subclassing_any = false
disallow_untyped_decorators = false

[tool.ruff]
line-length = 99
